...
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/step_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerView"
            app:layout_constraintVertical_bias="0.0">

...
                tools:text="12. With the mixer still running, pour the melted chocolate into the buttercream. Then add the remaining tablespoon of vanilla and 1/2 teaspoon of salt. Beat at high speed for 30 seconds to ensure the buttercream is well-mixed." />


        </android.support.v4.widget.NestedScrollView>

        <ImageView
            android:id="@+id/step_previous"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/desc_show_previous"
            app:layout_constraintBottom_toBottomOf="parent"
...
