<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="activityHandledClick"
            type="android.example.com.foodoo.handlers.ClickActionCallback" />

    </data>

<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredients_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:textColor="@color/stepItemBackground"
    android:background="@color/recipeHeaderBackground"
    android:clickable="true"
    android:focusable="true"
    android:onClick="@{(v) -> activityHandledClick.ingredientsButtonOnClick(v)}"
    android:text="@string/ingredients"
    tools:showIn="@layout/activity_step_list" />
</layout>