<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipes_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:spanCount="2"
        tools:listitem="@layout/recipe_list_item"
        tools:layoutManager="GridLayoutManager" />

    <ImageView
        android:id="@+id/json_exception_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_sad_face"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
</RelativeLayout>
</layout>